--- a/package.json
+++ b/package.json
@@ -27,12 +27,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "lucide-react": "^0.358.0",
-    "next": "15.2.0",
-    "next-themes": "^0.3.0",
-    "nuqs": "2.4.1",
+    "lucide-react": "0.483.0",
     "react": "^19.0.0",
-    "react-day-picker": "^8.0.0",
+    "react-day-picker": "9.6.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
@@ -57,6 +54,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "6.2.2"
   }
 }
