--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,11 @@ jobs:
         run: npm install
 
       - name: Build with Vite
-        run: npm run build
+        run: |
+          # Ensure env variables are available at build time
+          export VITE_SUPABASE_URL="${{ secrets.VITE_SUPABASE_URL }}"
+          export VITE_SUPABASE_ANON_KEY="${{ secrets.VITE_SUPABASE_ANON_KEY }}"
+          npm run build
 
       - name: Create 404.html from index.html
         run: |
